--- a/resume2.html
+++ b/resume2.html
@@ -4,46 +4,56 @@
         <title>Toufeeq's Resume</title>
     </head>
     <body>
-        <h1>Toufeeq Goudia</h1>
-        <p>An introductory personal statement</p>
-        <br>
-        <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" width="200">
-        <ul>
-            <li> <a href="#Education">Education</a> </li>
-            <li> <a href="#Experience">Experience</a> </li>
-            <li> <a href="#Skills">Skills</a> </li>
-        </ul>
-        <h2> <a name="Education">Education</a> </h2>
-        <h3>Into to Web at <a href="https://www.codespace.co.za/">CodeSpace Academy</a></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <h3>Qualification 2</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <h2> <a name="Experience">Experience</a> </h2>
-        <h3>Job 1</h3>
-        <p>
-            <ul>
-                <li>A sentence about the responsibilities of the job</li>
-                <li>A sentence about the responsibilities of the job</li>
-                <li>A sentence about the responsibilities of the job</li>
-                <li>A sentence about the responsibilities of the job</li>
-            </ul>
-        </p>
-        <h3>Job 2</h3>
-        <p>
-            <ul>
-                <li>A sentence about the responsibilities of the job</li>
-                <li>A sentence about the responsibilities of the job</li>
-                <li>A sentence about the responsibilities of the job</li>
-                <li>A sentence about the responsibilities of the job</li>
-            </ul>
-        </p>
-        <h2> <a name="Skills">Skills</a></h2>
-        <ul>
-            <li>Skill 1</li>
-            <li>Skill 2</li>
-            <li>Skill 3</li>
-            <li>Skill 4</li>
-        </ul>
-        <h2>Contact Details</h2>
-        <a href="www.linkedin.com/in/toufeeq-goudia-502b15231">LinkedIn</a>
+        <header>
+            <h1>Toufeeq Goudia</h1>
+            <p>An introductory personal statement</p>
+        </header>
+            <br>
+        <section>
+            <aside>
+                <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" width="200">
+                <ul>
+                    <li> <a href="#Education">Education</a> </li>
+                    <li> <a href="#Experience">Experience</a> </li>
+                    <li> <a href="#Skills">Skills</a> </li>
+                </ul>
+            </aside>
+            <article>
+                <h2> <a name="Education">Education</a> </h2>
+                <h3>Into to Web at <a href="https://www.codespace.co.za/">CodeSpace Academy</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3>Qualification 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2> <a name="Experience">Experience</a> </h2>
+                <h3>Job 1</h3>
+                <p>
+                    <ul>
+                        <li>A sentence about the responsibilities of the job</li>
+                        <li>A sentence about the responsibilities of the job</li>
+                        <li>A sentence about the responsibilities of the job</li>
+                        <li>A sentence about the responsibilities of the job</li>
+                    </ul>
+                </p>
+                <h3>Job 2</h3>
+                <p>
+                    <ul>
+                        <li>A sentence about the responsibilities of the job</li>
+                        <li>A sentence about the responsibilities of the job</li>
+                        <li>A sentence about the responsibilities of the job</li>
+                        <li>A sentence about the responsibilities of the job</li>
+                    </ul>
+                </p>
+                <h2> <a name="Skills">Skills</a></h2>
+                <ul>
+                    <li>Skill 1</li>
+                    <li>Skill 2</li>
+                    <li>Skill 3</li>
+                    <li>Skill 4</li>
+                </ul>
+            </article>
+        </section>
+        <footer>
+            <h2>Contact Details</h2>
+            <a href="www.linkedin.com/in/toufeeq-goudia-502b15231">LinkedIn</a>
+        </footer>
     </body>
