updated linkedin link

--- a/resume.html
+++ b/resume.html
@@ -54,6 +54,6 @@
         </section>
         <footer>
             <h2>Contact Details</h2>
-            <a href="www.linkedin.com/in/toufeeq-goudia-502b15231">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231">LinkedIn</a>
         </footer>
     </body>
