--- a/resume.html
+++ b/resume.html
@@ -2,21 +2,26 @@
 <html>
     <head>
         <title>Toufeeq's Resume</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>Toufeeq Goudia</h1>
-            <p>An introductory personal statement</p>
+            <section>
+                <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" class="profileImage">
+                <h1 class="profileName">Toufeeq Goudia</h1>
+                <p class="profileJob"></p>An introductory personal statement</p>
+            </section>
         </header>
             <br>
         <section>
             <aside>
-                <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" width="200">
-                <ul>
-                    <li> <a href="#Education">Education</a> </li>
-                    <li> <a href="#Experience">Experience</a> </li>
-                    <li> <a href="#Skills">Skills</a> </li>
-                </ul>
+                <p>
+                    <ul>
+                        <li> <a href="#Education">Education</a> </li>
+                        <li> <a href="#Experience">Experience</a> </li>
+                        <li> <a href="#Skills">Skills</a> </li>
+                    </ul>
+                </p>
             </aside>
             <article>
                 <h2> <a name="Education">Education</a> </h2>
