--- a/resume.html
+++ b/resume.html
@@ -2,21 +2,27 @@
 <html>
     <head>
         <title>Toufeeq's Resume</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <section>
-                <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" class="profileImage">
-                <h1 class="profileName">Toufeeq Goudia</h1>
-                <p class="profileJob"></p>An introductory personal statement</p>
+        <header class="container">
+            <section class="top">
+                <aside class="box">
+                    <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" class="profileImage">
+                    <h1 class="profileTitle">
+                        <p class="profileJob"> Software Development Student </p>
+                        <p style="font-size: 60px;"> Toufeeq Goudia </p>
+                    </h1>
+                </aside>
             </section>
         </header>
             <br>
-        <section>
+        <main class="content_container">
+        <section class="content_top">
             <aside>
+                <h4 class="menu"> Menu </h4>
                 <p>
-                    <ul>
+                    <ul class="menu_description">
                         <li> <a href="#Education">Education</a> </li>
                         <li> <a href="#Experience">Experience</a> </li>
                         <li> <a href="#Skills">Skills</a> </li>
@@ -24,41 +30,42 @@
                 </p>
             </aside>
             <article>
-                <h2> <a name="Education">Education</a> </h2>
-                <h3>Into to Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <h3>Qualification 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <h2> <a name="Experience">Experience</a> </h2>
-                <h3>Job 1</h3>
+                <h2 class="title"> <a name="Education">Education</a> </h2>
+                <h3 class="sub_title">Into to Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h3>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3 class="sub_title">Qualification 2</h3>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2 class="title"> <a name="Experience">Experience</a> </h2>
+                <h3 class="sub_title">Job 1</h3>
                 <p>
-                    <ul>
+                    <ul class="description">
                         <li>A sentence about the responsibilities of the job</li>
                         <li>A sentence about the responsibilities of the job</li>
                         <li>A sentence about the responsibilities of the job</li>
                         <li>A sentence about the responsibilities of the job</li>
                     </ul>
                 </p>
-                <h3>Job 2</h3>
+                <h3 class="sub_title">Job 2</h3>
                 <p>
-                    <ul>
+                    <ul class="description">
                         <li>A sentence about the responsibilities of the job</li>
                         <li>A sentence about the responsibilities of the job</li>
                         <li>A sentence about the responsibilities of the job</li>
                         <li>A sentence about the responsibilities of the job</li>
                     </ul>
                 </p>
-                <h2> <a name="Skills">Skills</a></h2>
-                <ul>
-                    <li>Skill 1</li>
-                    <li>Skill 2</li>
-                    <li>Skill 3</li>
-                    <li>Skill 4</li>
-                </ul>
+                <h2 class="title"> <a name="Skills">Skills</a></h2>
+                    <ul class="description">
+                        <li>Skill 1</li>
+                        <li>Skill 2</li>
+                        <li>Skill 3</li>
+                        <li>Skill 4</li>
+                    </ul>
             </article>
         </section>
-        <footer>
-            <h2>Contact Details</h2>
+        </main>
+        <footer class="contact_container">
+            <h2 class="title">Contact Details</h2>
             <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231" target="_blank" title="Toufeeq's LinkedIn">LinkedIn</a>
         </footer>
     </body>
