--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,6 @@
                 </aside>
             </section>
         </header>
-            <br>
         <main class="content_container">
         <section class="content_top">
             <aside>
@@ -31,7 +30,7 @@
             </aside>
             <article>
                 <h2 class="title"> <a name="Education">Education</a> </h2>
-                <h3 class="sub_title">Into to Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h3>
+                <h3 class="sub_title">Intro to Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <h3 class="sub_title">Qualification 2</h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -65,7 +64,9 @@
         </section>
         </main>
         <footer class="contact_container">
-            <h2 class="title">Contact Details</h2>
-            <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231" target="_blank" title="Toufeeq's LinkedIn">LinkedIn</a>
+            <section class="contact_box">
+                <h2 class="title">Contact Details</h2>
+                <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231" target="_blank" title="Toufeeq's LinkedIn">LinkedIn</a>
+            </section>
         </footer>
     </body>
