--- a/resume6.html
+++ b/resume6.html
@@ -3,6 +3,7 @@
     <head>
         <title>Toufeeq's Resume</title>
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://kit.fontawesome.com/e223308f2e.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="container">
@@ -11,30 +12,39 @@
                     <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" class="profileImage">
                     <h1 class="profileTitle">
                         <p class="profileJob"> Software Development Student </p>
-                        <p style="font-size: 60px;"> Toufeeq Goudia </p>
+                        <p class="profileName" style="font-size: 60px;"> Toufeeq Goudia </p>
                     </h1>
                 </aside>
             </section>
         </header>
         <main class="content_container">
-        <section class="content_top">
+        <section>
             <aside>
-                <h4 class="menu"> Menu </h4>
+                <h2 class="menu"> Menu </h2>
                 <p>
                     <ul class="menu_description">
                         <li> <a href="#Education">Education</a> </li>
                         <li> <a href="#Experience">Experience</a> </li>
                         <li> <a href="#Skills">Skills</a> </li>
+                        <li> <a href="#Hobbies">Hobbies</a> </li>
+                        <li> <a href="#Contact">Contact</a> </li>
                     </ul>
                 </p>
             </aside>
-            <article>
+            <article class="content_box">
                 <h2 class="title"> <a name="Education">Education</a> </h2>
-                <h3 class="sub_title">Intro to Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h3>
+                <p class="date"> January 2015 - December 2015 </p>
+                <h3 class="sub_title"> Qualification 1 </h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="date"> January 2018 - April 2018 </p>
                 <h3 class="sub_title">Qualification 2</h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="date"> January 2023 - Present </p>
+                <h3 class="sub_title">Intro to Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h3>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <h2 class="title"> <a name="Experience">Experience</a> </h2>
+                <p class="date"> January 2016 - December 2017 </p>
+                <p class="date"> May 2018 - December 2020 </p>
                 <h3 class="sub_title">Job 1</h3>
                 <p>
                     <ul class="description">
@@ -44,6 +54,7 @@
                         <li>A sentence about the responsibilities of the job</li>
                     </ul>
                 </p>
+                <p class="date"> January 2021 - August 2022 </p>
                 <h3 class="sub_title">Job 2</h3>
                 <p>
                     <ul class="description">
@@ -53,20 +64,30 @@
                         <li>A sentence about the responsibilities of the job</li>
                     </ul>
                 </p>
+            </article>
                 <h2 class="title"> <a name="Skills">Skills</a></h2>
-                    <ul class="description">
+                    <ul class="skill_list">
                         <li>Skill 1</li>
                         <li>Skill 2</li>
                         <li>Skill 3</li>
                         <li>Skill 4</li>
                     </ul>
-            </article>
+                <h2 class="title"> <a name="Hobbies">Hobbies</a></h2>
+                    <ul class="hobby_list">
+                        <li> <i class="fa-solid fa-gamepad"></i> Gaming </li>
+                        <li> <i class="fa-regular fa-futbol"></i> Soccer </li>
+                        <li> <i class="fa-solid fa-photo-film"></i> Content Creation </li>
+                    </ul>
         </section>
         </main>
         <footer class="contact_container">
             <section class="contact_box">
-                <h2 class="title">Contact Details</h2>
-                <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231" target="_blank" title="Toufeeq's LinkedIn">LinkedIn</a>
+                <h2 class="contact_title"> <a name="Contact">Contact</a></h2>
+                <ul class="contact_list">
+                    <li> <i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231/" target="_blank"> LinkedIn </a> </li>
+                    <li> <i class="fa-solid fa-envelope"></i> <a href="mailto:toufeeqgoudia@gmail.com" target="_blank"> toufeeqgoudia@gmail.com </a> </li>
+                    <li> <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/toufeeqgoudia/" target="_blank"> Instagram </a> </li>
+                </ul>
             </section>
         </footer>
     </body>
