added sticky navigation bar - resume6.html

--- a/resume6.html
+++ b/resume6.html
@@ -19,18 +19,13 @@
         </header>
         <main class="content_container">
         <section>
-            <aside>
-                <h2 class="menu"> Menu </h2>
-                <p>
-                    <ul class="menu_description">
-                        <li> <a href="#Education">Education</a> </li>
-                        <li> <a href="#Experience">Experience</a> </li>
-                        <li> <a href="#Skills">Skills</a> </li>
-                        <li> <a href="#Hobbies">Hobbies</a> </li>
-                        <li> <a href="#Contact">Contact</a> </li>
-                    </ul>
-                </p>
-            </aside>
+            <nav class="menu">
+                <a href="#Education">Education</a>
+                <a href="#Experience">Experience</a>
+                <a href="#Skills">Skills</a>
+                <a href="#Hobbies">Hobbies</a>
+                <a href="#Contact">Contact</a>
+            </nav>
             <article class="content_box">
                 <h2 class="title"> <a name="Education">Education</a> </h2>
                 <p class="date"> January 2015 - December 2015 </p>
