--- a/resume6.html
+++ b/resume6.html
@@ -78,11 +78,14 @@
         <footer class="contact_container">
             <section class="contact_box">
                 <h2 class="contact_title"> <a name="Contact">Contact</a></h2>
-                <ul class="contact_list">
-                    <li> <i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231/" target="_blank"> LinkedIn </a> </li>
-                    <li> <i class="fa-solid fa-envelope"></i> <a href="mailto:toufeeqgoudia@gmail.com" target="_blank"> toufeeqgoudia@gmail.com </a> </li>
-                    <li> <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/toufeeqgoudia/" target="_blank"> Instagram </a> </li>
-                </ul>
+                    <ul class="contact_list">
+                        <li> <i class="fa-solid fa-location-dot"></i> Cape Town </li>
+                        <li> <i class="fa-solid fa-phone"></i> +27 345 6789</li>
+                        <li> <i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/toufeeq-goudia-502b15231/" target="_blank"> LinkedIn </a> </li>
+                        <li> <i class="fa-brands fa-github"></i> <a href="https://github.com/toufeeqgoudia/" target="_blank"> GitHub </a> </li>
+                        <li> <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/toufeeqgoudia/" target="_blank"> Instagram </a> </li>
+                    </ul>
             </section>
+            <a class="btt" href="#" title="Back to Top"> <i class="fa-solid fa-arrow-up"></i> </a>
         </footer>
     </body>
