--- a/resume6.html
+++ b/resume6.html
@@ -35,7 +35,7 @@
                 <h3 class="sub_title">Qualification 2</h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p class="date"> January 2023 - Present </p>
-                <h3 class="sub_title">Intro to Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h3>
+                <h3 class="sub_title">Intro to Web at <a href="https://www.codespace.co.za/" target="_blank" class="cs_link">CodeSpace Academy</a></h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <h2 class="title"> <a name="Experience">Experience</a> </h2>
                 <p class="date"> January 2016 - December 2017 </p>
@@ -59,20 +59,20 @@
                         <li>A sentence about the responsibilities of the job</li>
                     </ul>
                 </p>
-            </article>
                 <h2 class="title"> <a name="Skills">Skills</a></h2>
-                    <ul class="skill_list">
+                    <ul class="skill_list">   <!-- might change class to 'description'-->
                         <li>Skill 1</li>
                         <li>Skill 2</li>
                         <li>Skill 3</li>
                         <li>Skill 4</li>
                     </ul>
                 <h2 class="title"> <a name="Hobbies">Hobbies</a></h2>
-                    <ul class="hobby_list">
+                    <ul class="hobby_list">   <!-- keep class as 'hobby_list'-->
                         <li> <i class="fa-solid fa-gamepad"></i> Gaming </li>
                         <li> <i class="fa-regular fa-futbol"></i> Soccer </li>
                         <li> <i class="fa-solid fa-photo-film"></i> Content Creation </li>
                     </ul>
+            </article>
         </section>
         </main>
         <footer class="contact_container">
