added background images

--- a/resume7-2.html
+++ b/resume7-2.html
@@ -6,7 +6,7 @@
         <script src="https://kit.fontawesome.com/e223308f2e.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header id="hero">
+        <header class="hero">
             <section class="container">
                 <section class="top">
                     <aside class="box">
