created hero image in header section

--- a/resume7-2.html
+++ b/resume7-2.html
@@ -62,14 +62,14 @@
                     </ul>
                 </p>
                 <h2 class="title"> <a name="Skills">Skills</a></h2>
-                    <ul class="skill_list">   <!-- might change class to 'description'-->
+                    <ul class="skill_list">   
                         <li>Skill 1</li>
                         <li>Skill 2</li>
                         <li>Skill 3</li>
                         <li>Skill 4</li>
                     </ul>
                 <h2 class="title"> <a name="Hobbies">Hobbies</a></h2>
-                    <ul class="hobby_list">   <!-- keep class as 'hobby_list'-->
+                    <ul class="hobby_list">   
                         <li> <i class="fa-solid fa-gamepad"></i> Gaming </li>
                         <li> <i class="fa-regular fa-futbol"></i> Soccer </li>
                         <li> <i class="fa-solid fa-photo-film"></i> Content Creation </li>
