used picyture element for profile image

--- a/resume7-2.html
+++ b/resume7-2.html
@@ -10,10 +10,14 @@
             <section class="container">
                 <section class="top">
                     <aside class="box">
-                        <img src="Images/toufeeqgoudia.jpg" alt="Toufeeq Goudia" class="profileImage">
+                        <picture>
+                            <source srcset="Images/toufeeq-small.jpg" media="(max-width: 650px)">
+                            <source srcset="Images/toufeeq-medium.jpg" media="(max-width: 1000px)">
+                            <img src="Images/toufeeq-large.jpg" alt="Toufeeq Goudia" class="profileImage">
+                        </picture>
                         <h1 class="profileTitle">
                             <p class="profileJob"> Software Development Student </p>
-                            <p class="profileName" style="font-size: 60px;"> Toufeeq Goudia </p>
+                            <p class="profileName"> Toufeeq Goudia </p>
                         </h1>
                     </aside>
                 </section>
