--- a/resume7-2.html
+++ b/resume7-2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Toufeeq's Resume</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/e223308f2e.js" crossorigin="anonymous"></script>
